# cmem-plugin-pyshacl

./: .copier-answers.env  .copier-answers.yml  .gitignore  .gitlab-ci.yml  .tasks-plugin.yml  CHANGELOG.md  README-public.md  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: check.yml  publish.yml
cmem_plugin_pyshacl/: __init__.py  plugin_pyshacl.py  plugin_pyshacl_remote.py
tests/: shacl-shacl.nt  test_pyshacl.py  test_pyshacl.ttl  test_pyshacl_remote.py
