[tool.poetry]
name = "cmem-plugin-pyshacl"
version = "4.0.4"
license = "Apache-2.0"
description = "This eccenca Corporate Memory plugin totally rocks :-)"
authors = ["Thomas Wilmering <thomas.wilmering@eccena.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README-public.md"
keywords = [
    "eccenca Corporate Memory", "plugin"
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
pyshacl = "^0.20.0"
validators = "^0.20.0"
requests-toolbelt = "^0.9.1"
rdflib = "^6.2.0"
cmem-cmempy = "^22.1.1"
cmem-plugin-base = "^2.1.0"
types-setuptools = "^65.5.0.3"
distutils-strtobool = "^0.1.0"
packaging = "21.3"
ruamel-yaml = "^0.17.21"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
cmem-plugin-base = "^2.1.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"
bandit = "^1.7.2"
pylint-junit = "^0.3.2"
safety = "2.2.1"
genbadge = "^1.0.6"
flake8-formatter-junit-xml = "^0.0.6"
typed-ast = "^1.5.2"
mypy = "^0.931"
coverage = "^6.3.2"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
load-plugins="pylint_junit"

[tool.pylint.General]
ignore = "version.py"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = "fixme"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "R0903"

[tool.pylint.format]
max-line-length = "100"

[tool.pylint.design]
max-args = "13"
max-branches = "15"
max-attributes = "14"

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""

